--- a/environments/production/environment.yaml
+++ b/environments/production/environment.yaml
@@ -7,7 +7,7 @@ app:
   # scenario. If the value is set to an empty string ("") the application
   # is not deployed.
   # KLP Buid ID
-  version: ""
+  version: "6e18edfe-1fe4-421e-926e-b807fb63602e"
   
   # Set the Maven coordinates of the Maven artifact to deploy for the 
   # "Deploy, and run" scenario.
